[gd_scene load_steps=20 format=2]

[ext_resource path="res://Sprites/ShieldEnemyWalk/EnemyShield-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/EnemyShield.gd" type="Script" id=2]
[ext_resource path="res://Assets/ProgressBarSkin.tres" type="Theme" id=10]
[ext_resource path="res://Assets/FlashMaterial.tres" type="Material" id=11]

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( -7, 113, 4, 113, 55, 113, 74, 113, 58, 127, 4, 127 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 57.5, 108 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 256 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 256 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 256 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 256 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 256 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 128, 256 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 128, 256 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 0, 128, 256 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 0, 128, 256 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1152, 0, 128, 256 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1280, 0, 128, 256 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1408, 0, 128, 256 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[node name="EnemyShield" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( -33, -8 )
occluder = SubResource( 2 )

[node name="Area2DEnemyBasic" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DEnemyBasic"]
position = Vector2( 2.5, -1 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 11 )
frames = SubResource( 11 )
animation = "walk"
playing = true
flip_h = true

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ProgressBar" type="ProgressBar" parent="Control"]
margin_left = -36.0
margin_top = -120.0
margin_right = 36.0
margin_bottom = -115.0
theme = ExtResource( 10 )
max_value = 2.0
value = 2.0
percent_visible = false

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]
